# CPE442

./: .gitignore  README  main.cpp
Lab1/: Makefile
Lab1/main.dSYM/Contents/Resources/DWARF/: main
Lab2/: main.cpp
Lab2/main.dSYM/Contents/Resources/DWARF/: main
Lab3/: Makefile  main  main.cpp
Lab3/main.dSYM/Contents/Resources/DWARF/: main
Lab4/: CMakeLists.txt  Makefile  main  main.cpp  pthread_barrier.cpp  pthread_barrier.h
Lab4/main.dSYM/Contents/Resources/DWARF/: main
Lab5/: CMakeLists.txt
Lab5/lib/: pthread_barrier.h
Lab5/src/: Makefile  main  main 2  main.cpp
Lab6/: CMakeLists.txt
Lab6/src/: Makefile  main  main 2  main.cpp  timing.txt
Sobel Filter/: CMakeLists.txt  Makefile  main.cpp
Sobel Filter/main.dSYM/Contents/Resources/DWARF/: main
Sobel Filter/src/: main.cpp
Sobel_Filter/: CMakeLists.txt
Sobel_Filter/lib/: pthread_barrier.h
Sobel_Filter/src/: Makefile  main  main.cpp
Sobel_Filter/toolchain/: Makefile  toolchain-rasppi.cmake
Sobel_Tests/: CMakeLists.txt  blase4.cpp  jon5.cpp  josh5.cpp  main.cpp  main2.cpp  testing.cpp  testing.s  vector_filter_kernel.cl
Sobel_Tests/lib/: pthread_barrier.cpp
_CPE_other/: CMakeLists.txt
_CPE_other/src/: main.cpp
test/src/: main.cpp
timer/: Makefile  main.py  requirements.txt
untitled/: main.cpp
